...

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/vodka_button"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_margin="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:padding="10dp"
            android:src="@drawable/vodkatransparent" />

        <ImageView
            android:id="@+id/rum_button"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:padding="0dp"
            android:src="@drawable/rum" />

        <ImageView
            android:id="@+id/gin_button"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
...

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/tequila_button"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:padding="5dp"
            android:src="@drawable/tequila" />

        <ImageView
            android:id="@+id/whiskey_button"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:padding="5dp"
            android:src="@drawable/whiskey" />

        <ImageView
            android:id="@+id/mixed_button"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="1">

        <!--<Button-->
        <!--android:id="@+id/custom_drinks_button"-->
        <!--style="@style/TextAppearance.AppCompat.Widget.DropDownItem"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="35dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginBottom="30dp"-->
        <!--android:layout_marginLeft="50dp"-->
...
